# qwen_lora_image_editing_project

signforge-local/: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  PRESENTATION.md  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
signforge-local/.github/workflows/: ci.yml  release.yml
signforge-local/configs/: app.yaml
signforge-local/configs/inference/: default.yaml
signforge-local/configs/inference/profiles/: fast.yaml  quality.yaml
signforge-local/configs/training/: base_lora.yaml  environment.yaml  lighting.yaml  mounting.yaml  perspective.yaml  sign_type.yaml
signforge-local/models/loras/environment/: README.md
signforge-local/models/loras/lighting/: README.md
signforge-local/models/loras/material/: README.md
signforge-local/models/loras/mounting/: README.md
signforge-local/models/loras/perspective/: README.md
signforge-local/models/loras/sign_type/: README.md
signforge-local/scripts/: download_models.py  server.ps1  server.sh  setup_dev.ps1  setup_dev.sh  train.ps1  train.sh
signforge-local/src/signforge/: __init__.py  version.py
signforge-local/src/signforge/assistant/: __init__.py  chatbot.py  retrieval.py  service.py  tools.py
signforge-local/src/signforge/core/: __init__.py  config.py  device.py  errors.py  logging.py
signforge-local/src/signforge/data/: __init__.py  captions.py  dataset.py  preprocess.py  schema.py  splits.py
signforge-local/src/signforge/inference/: __init__.py  api_schema.py  queue.py  service.py
signforge-local/src/signforge/ml/: __init__.py  lora_manager.py  pipeline.py
signforge-local/src/signforge/ml/conditioning/: __init__.py  background_conditioner.py  logo_conditioner.py
signforge-local/src/signforge/ml/eval/: __init__.py  drift.py  metrics.py
signforge-local/src/signforge/ml/prompt/: __init__.py  rewrite.py  templates.py
signforge-local/src/signforge/ml/safety/: __init__.py  validators.py
signforge-local/src/signforge/monitoring/: __init__.py  prometheus.py
signforge-local/src/signforge/monitoring/dashboard/: docker-compose.monitoring.yaml
signforge-local/src/signforge/monitoring/dashboard/grafana/: dashboards.json
signforge-local/src/signforge/server/: __init__.py  app.py
signforge-local/src/signforge/server/routes/: adapters.py  chat.py  docs.py  generate.py  health.py  metrics.py
signforge-local/src/signforge/training/: __init__.py  callbacks.py  checkpoints.py  configs.py  export.py  loops.py  train_lora.py  train_many.py  validate.py
signforge-local/src/signforge/ui/: __init__.py  build.py
signforge-local/src/signforge/ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
signforge-local/src/signforge/ui/frontend/src/: App.tsx  index.css
signforge-local/static/: index.html
signforge-local/static/assets/: index--CdBc7oG.css  index-B5MM0EnD.js  index-BCKRGcyl.css  index-BglcsiLf.css  index-COXYyK7I.css  index-CpvR6UJQ.js  index-DxqEO0zc.js  index-NuYyRFPq.js
signforge-local/tests/: conftest.py  test_basic.py  test_pipeline.py  test_server.py
signforge-local/tests/e2e/: test_generation_cycle.py
signforge-local/tests/integration/: test_api_endpoints.py  test_service_flow.py
signforge-local/tests/unit/: test_config.py  test_device.py  test_validation.py
